--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/express-http-proxy": "^1.6.1",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "mysql2": "^2.2.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
